                                                                -*- outline -*-
New in v4.6.0
* Update to API change in hpp-core.