@@ -1,3 +1,4 @@
                                                                 -*- outline -*-
+* Update tutorial instructions to run gepetto-gui after hppcorbaserver.
 New in v4.6.0
 * Update to API change in hpp-core.
